# barangay

./: .gitignore  README.md  barangay.json  barangay.yaml  pyproject.toml
.github/workflows/: publish.yaml
barangay/: __init__.py
barangay_list/: __init__.py  barangay.json  barangay.yaml
notebooks/: creating_database.ipynb  creating_fuzzy_search.ipynb  parsing_process.ipynb  parsing_process_db.ipynb  parsing_process_extended.ipynb  parsing_process_flat.ipynb  parsing_process_main.ipynb  sample_usage.ipynb  wrangling_psgc.ipynb
resources/: psgc_2025-08-07.csv
