[project]
name = "barangay-list"
version = "0.1.0"
description = "list of barangays in the Philippines"
authors = [
    {name = "bendlikeabamboo",email = "mbalmeo32@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.5,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.32.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
