[project]
name = "barangay"
version = "0.1.0"
description = "Nested dictionary of Philippine barangay. Updated as of 2025."
authors = [
    {name = "bendlikeabamboo",email = "manuelb@hawitsu.xyz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
