[project]
name = "barangay"
version = "0.3.1"
description = "Philippines Standard Geographic Code (PSGC) 2025 Python package, JSON, and YAML."
authors = [{ name = "bendlikeabamboo", email = "manuelb@hawitsu.xyz" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["philippines", "geography", "barangay", "region"]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["rapidfuzz (>=3.13.0,<4.0.0)"]

[project.urls]
homepage = "https://hawitu.xyz"
repository = "https://github.com/bendlikeabamboo/barangay"
documentation = "https://github.com/bendlikeabamboo/barangay/blob/main/README.md"
"Bug Tracker" = "https://github.com/bendlikeabamboo/barangay/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas = "^2.3.1"
jupyterlab = "^4.4.5"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"
tabula-py = {extras = ["jpype"], version = "^2.10.0"}
python-dotenv = "^1.1.1"
pyspark = "^4.0.0"
delta-spark = "^4.0.0"
